<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_cover_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/paris" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_very_large"
            android:background="@color/black_transparent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/length_small"
            android:paddingRight="@dimen/length_very_small"

            >

            <TextView
                style="@style/item_discovered_transparentbar_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/explore_paris" />

            <TextView
                style="@style/item_discovered_transparentbar_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Paris" />
        </LinearLayout>

        <TextView
            style="@style/item_discovered_tv_over_image"
            android:layout_width="@dimen/xxlength_very_large"
            android:layout_height="@dimen/length_medium"
            android:background="@drawable/view_button_background"
            android:text="@string/send_req" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/length_very_small"
        android:orientation="vertical"


        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/item_discovered_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/add_image_icon"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/length_very_small"
                android:layout_marginTop="@dimen/length_small"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/john" />


                <RatingBar
                    android:id="@+id/rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="6"
                    android:rating="5" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_time_left"
                style="@style/item_discovered_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/icon_timer"
                android:text="@string/time_left" />

            <TextView
                android:id="@+id/tv_reviews"
                style="@style/item_discovered_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/icon_comment_offclick_large"
                android:text="@string/review" />
        </LinearLayout>

        <TextView
            style="@style/item_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_text" />
    </LinearLayout>


</LinearLayout>
