<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            style="@style/item_request_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/item_request_tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/john" />


                    <RatingBar
                        android:id="@+id/ratingbar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:rating="5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/item_request_tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/address" />

                    <TextView
                        style="@style/item_request_tv3"
                        android:layout_width="83dp"
                        android:layout_height="24dp"
                        android:text="@string/show_on_map"


                        />
                </LinearLayout>

                <TextView
                    style="@style/item_request_tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_left" />

                <TextView
                    style="@style/item_request_tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_text" />

            </LinearLayout>


        </android.support.v7.widget.CardView>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card_view"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginTop="205dp"
        >

        <TextView
            style="@style/accept_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/accept_background"
            android:text="@string/accept" />

        <TextView
            style="@style/reject_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/reject_background"
            android:text="@string/reject" />
    </LinearLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profile_image"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        />



</FrameLayout>