<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rishucuber.assignment4.fragment.RequestsFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginLeft="@dimen/length_medium"
       android:layout_marginRight="@dimen/length_medium"
       android:layout_marginBottom="@dimen/length_small"
       android:layout_marginTop="@dimen/length_medium"
       >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/posts"
           android:background="@drawable/right_halfpill_background"
           style="@style/fragment_request_header_tv"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/map"
           android:textColor="@android:color/white"
           style="@style/fragment_request_header_tv"
           android:background="@color/colorPrimary"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/network"
           android:background="@drawable/left_halfpill_background"
           style="@style/fragment_request_header_tv"/>
   </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_request"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
