<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="11dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
       />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="11dp"

        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/itemn_network_tv1"
        android:text="@string/Evelyn"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/itemn_network_tv2"
        android:text="@string/Paris"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       android:gravity="end"
        >
    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        style="?android:attr/ratingBarStyleSmall"
        android:rating="5"
        android:layout_weight="0.5"
        />
    <TextView
        android:layout_width="90dp"
        android:layout_height="30dp"
        style="@style/itemn_network_tv3"
        android:text="@string/connect"/>
        </LinearLayout>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>

</LinearLayout>
