<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_network_iv"
        android:layout_width="@dimen/circular_image_side"
        android:layout_height="@dimen/circular_image_side"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/item_network_tv_name"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/item_network_iv"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/item_network_iv"
        android:text="@string/evelyn"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/item_network_tv_city"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_network_iv"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@+id/item_network_iv"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/icon_location"
        android:text="@string/Paris"
        android:textColor="@color/grey_text"/>

    <TextView
        android:id="@+id/item_network_tv_connect"
        style="@style/RoundedLeftTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/item_network_rating"
        android:layout_marginTop="4dp"
        android:text="@string/connect" />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/item_network_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/item_network_iv"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="4"
        android:stepSize="0.5" />

</RelativeLayout>